name:              un-block-and-mute-all
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Custom

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends: base
                 , aeson
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , fast-logger
                 , file-embed
                 , hjsmin
                 , http-conduit
                 , monad-control
                 , monad-logger
                 , process
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-auth-oauth
                 , yesod-core
                 , yesod-form
                 , yesod-static

executable         un-block-and-mute-all
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, un-block-and-mute-all

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommonSpec
                       Handler.HomeSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends: base, un-block-and-mute-all
                 , aeson
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec
                 , yesod
                 , yesod-core
                 , yesod-test
